syntax = "proto3";

package netsvr.topicUniqIdListResp;

option go_package = "pkg/protocol;protocol";

//worker响应business，返回网关中某个主题包含的uniqId
message TopicUniqIdListResp {
  //worker原样回传给business
  bytes ctxData = 1;
  //当前主题
  string topic = 2;
  //当前主题包含的uniqId
  repeated string uniqIds = 3;
}